# gcp_compute_inv

./: Dockerfile  entrypoint.py  github-bootstrap-key.json  main.py  pyproject.toml
.github/workflows/: deploy.yaml  deploy_inv_vm_job.yaml  deploy_sch_vm_job.yaml  deploy_vm_job.yaml  publish.yaml
env/dev/: config.env
gke/: main.py
nodepool-schedule-redis/: main.py
nodepool-scheduler/: main.py
nodepool_schedule_redis/: main.py
projects/: main.py
test/: show_redis_set.py
utils/: config_loader.py
vm-scheduler/: main.py
vm-scheduler-redis/: main.py
vms/: main.py
